--- a/src/App-Info.plist
+++ b/src/App-Info.plist
@@ -9,12 +9,9 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>icon_shad.png</string>
+	<string>Icon@2x.png</string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>icon_shad@2x.png</string>
-		<string>icon_shad.png</string>
-		<string>icon_shad@2x.png.png</string>
 		<string>Icon.png</string>
 		<string>Icon@2x.png</string>
 	</array>
